# ActInt2

./: CMakeLists.txt  edmonds_karp.h  kruskal.h  lineal_search.h  main  main.cpp  sonar-project.properties  team.txt  tsp.h
.github/workflows/: build.yml
tests/: test_edmonds_karp.cpp  test_kruskal.cpp  test_lineal_search.cpp  test_tsp.cpp
